versioned_docs/version-0.9/reference/model/crypto.md
---
title: "crypto"
linkTitle: "crypto"
type: "docs"
description: crypto system module
weight: 100
---

## md5

`md5(value: str, encoding: str = "utf-8") -> str`

Encrypt the string `value` using `MD5` and the codec registered for encoding.

## sha1

`sha1(value: str, encoding: str = "utf-8") -> str`

Encrypt the string `value` using `SHA1` and the codec registered for encoding.

## sha224

`sha224(value: str, encoding: str = "utf-8") -> str`

Encrypt the string `value` using `SHA224` and the codec registered for encoding.

## sha256

`sha256(value: str, encoding: str = "utf-8") -> str`

Encrypt the string `value` using `SHA256` and the codec registered for encoding.

## sha384

`sha384(value: str, encoding: str = "utf-8") -> str`

Encrypt the string `value` using `SHA384` and the codec registered for encoding.

## sha512

`sha512(value: str, encoding: str = "utf-8") -> str`

Encrypt the string `value` using `SHA512` and the codec registered for encoding.

## uuid

`uuid() -> str`

Generate a random UUID string.

## filesha256

`filesha256(filepath: str) -> str`

Calculate the SHA256 hash of the file `filepath`.
